# si_game

./: .env  Cargo.toml  README.md
py_code/: main.py
src/: main.rs
src/domain/: entities.rs
src/domain/entities/: board.rs  events.rs  game.rs  package.rs  user.rs
src/infrastructure/: repositories.rs
src/infrastructure/repositories/: connection.rs  packages.rs
src/presentation/web_api/: server.rs
src/presentation/web_api/controllers/: packages.rs
